disable booking button for users that we know that can't create booking for certain ads. added a translate me for explaining the situation to the user.

--- a/app/views/ads/_ad_booking_box.html.erb
+++ b/app/views/ads/_ad_booking_box.html.erb
@@ -17,7 +17,10 @@
 
             <% unless user_signed_in? && !ad.user.id == current_user.id %>
                 <div class="ad-booking-box__button-holder">
-                    <%= button_tag("Gå til booking", {class: "u-push-down button button-primary booking-request-form__book-button"}) %>
+                    <%= button_tag("Gå til booking", disabled: ( current_user.present? && !(current_user.can_rent? @ad.category) ), class: "u-push-down button button-primary booking-request-form__book-button",  ) %>
+                    <% if current_user.present? && ! (current_user.can_rent? @ad.category) %>
+                        <small> TRANSLATEME: beklager, men du kan ikke leie den. Det er sikker pga noe validering.. </small>
+                    <% end %>
                 </div>
             <% end %>
 
