--- a/app/views/users/private_profile.html.erb
+++ b/app/views/users/private_profile.html.erb
@@ -3,9 +3,7 @@
 <div class="container">
     <div class="row">
         <div class="eight columns">
-            <h1>Din profil</h1>
-
-            <%= render layout: "gray_box" do %>
+            <%= render layout: "gray_box", locals: {title: 'Min profil'} do %>
                 <div class="biz-card">
                     <div class="biz-card__avatar">
                         <%= avatar_image current_user, :huge %>
