--- a/app/views/users/_edit_identity.html.erb
+++ b/app/views/users/_edit_identity.html.erb
@@ -23,7 +23,7 @@
     <% providers.each do |provider| %>
         <div class="conns-box">
             <div class="conns-box__left">
-                <h5><%= provider[:name] %></h5>
+                <h5 class="conns-box__title"><%= provider[:name] %></h5 class="conns-box__title">
                 <div>
                     Du kan opprette en kobling fra Plendit til din
                     <%= provider[:name] %>-konto. Det bygger tillit
