--- a/app/views/ads/_ad_status_bar.html.erb
+++ b/app/views/ads/_ad_status_bar.html.erb
@@ -12,10 +12,15 @@
                             Annonsen er sendt til kontroll.
                         <% elsif ad.status == 'paused' %>
                             Annonsen er satt på pause.
+                        <% elsif ad.status == 'refused' %>
+                            Annonsen var ikke godkjent av kontroll.
                         <% elsif ad.status == 'stopped' %>
                             Annonsen er stoppet.
                         <% end %>
                     </h5>
+                    <% if ad.status == 'refused' %>
+                        <small>Grunnen: <%= ad.refusal_reason %></small>
+                    <% end %>
                 </div>
 
                 <div>
@@ -37,8 +42,14 @@
                     <% if ad.status == 'waiting_review' %>
                         <%= button_to 'Godkjenn', approve_ad_path(ad), form_class: "ad-status-box__form", class: "ad-status-box__button button " %>
                     <% end %>
+                    <% if ad.status != 'refused' %>
+                        <%= form_for @ad, url: refuse_ad_path(ad), method: :post, class: "ad-status-box__form" do |f| %>
+                            <%= f.text_field :refusal_reason, placeholder: "refusal reason" %>
+                            <%= f.submit 'Refuse', class: "ad-status-box__button button" %>
+                        <% end %>
+                    <% end %>
                     <% if ad.status != 'suspended' %>
-                        <%= button_to 'Suspend', suspend_ad_path(ad), form_class: "ad-status-box__form", class: "ad-status-box__button button " %>
+                        <%= button_to 'Suspend (blackhole)', suspend_ad_path(ad), form_class: "ad-status-box__form", class: "ad-status-box__button button " %>
                     <% end %>
                 </div>
             </div>
