--- a/app/views/ads/_ad_status_box.html.erb
+++ b/app/views/ads/_ad_status_box.html.erb
@@ -11,7 +11,9 @@
         <%= button_to 'Rediger annonsen', edit_ad_path(ad),   form_class: "ad-status-box__form", class: "ad-status-box__button button ", method: :get, data: { confirm: 'Hvis du redigerer annonsen, vil den bli sendt til kontroll på nytt. Er du sikker på at du vil redigere annonsen din?' } %>
         <%= button_to 'Aktiver annonsen', resume_ad_path(ad), form_class: "ad-status-box__form", class: "ad-status-box__button button " %>
         <%= button_to 'Stopp annonsen',   stop_ad_path(ad),   form_class: "ad-status-box__form", class: "ad-status-box__button button ", method: :get,  data: { confirm: 'Hvis du stopper annonsen, kan bare du se den. Er du sikker på at du vil stoppe annonsen din?'} %>
-    <% elsif ad.draft? %> %>
+    <% elsif ad.draft? %>
+    <% elsif ad.refused? %>
+        <%= button_to 'Rediger annonsen', edit_ad_path(ad),   form_class: "ad-status-box__form", class: "ad-status-box__button button ", method: :get %>
     <% elsif ad.stopped? %>
         <%= button_to 'Rediger annonsen', edit_ad_path(ad),   form_class: "ad-status-box__form", class: "ad-status-box__button button ", method: :get, data: { confirm: 'Hvis du redigerer annonsen, vil den bli sendt til kontroll på nytt. Er du sikker på at du vil redigere annonsen din?' } %>
         <%= button_to 'Aktiver annonsen', resume_ad_path(ad), form_class: "ad-status-box__form", class: "ad-status-box__button button " %>
