--- a/app/views/ads/_ad_status_bar.html.erb
+++ b/app/views/ads/_ad_status_bar.html.erb
@@ -43,7 +43,7 @@
                         <%= button_to 'Godkjenn', approve_ad_path(ad), form_class: "ad-status-box__form", class: "ad-status-box__button button " %>
                     <% end %>
                     <% if ad.status != 'refused' %>
-                        <%= form_for @ad, url: refuse_ad_path(ad), method: :post, class: "ad-status-box__form" do |f| %>
+                        <%= form_for @ad, url: refuse_ad_path(ad), method: :post, html: { class: "ad-status-box__form" } do |f| %>
                             <%= f.text_field :refusal_reason, placeholder: "refusal reason" %>
                             <%= f.submit 'Refuse', class: "ad-status-box__button button" %>
                         <% end %>
