Tweak padding on status labels

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -88,6 +88,7 @@ summary {
 
 .status-label {
     padding: 4px;
+    padding-right: 7px; // due to italics.
     font-weight: lighter;
     font-style: italic;
 
