--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -79,6 +79,9 @@
                     <label>Registreringsnummer:</label>
                     <small>(valgfritt, kun om det er aktuelt)</small>
                     <%= f.text_field :registration_number, class: 'u-full-width', placeholder: "Regnr" %>
+                    <div class="help-box u-push-down">
+                    Dersom båten ikke er registrert eller du ikke har registreringsnummer tilgjengelig, vil du bli nødt til å dokumentere eierskap ved eventuelle skader/tap.
+                </div>
                 </div>
             </div>
 
