Added more styling to default box baseclass

--- a/app/assets/stylesheets/_constants.scss
+++ b/app/assets/stylesheets/_constants.scss
@@ -42,8 +42,16 @@ $subtle-shadow: 0 1px 5px rgba(black, 0.1);
 
 .standard-box {
     padding: $standard-spacing * 2;
-    border-bottom: 1px solid $color-gray-background;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+    border-top: 1px solid $color-gray-background;
+    border-left: 1px solid $color-gray-background;
+    border-right: 1px solid $color-gray-background;
+    box-shadow: $subtle-shadow;
+    background-color: white;
+    color: black;
+
+    &:last-of-type {
+        border-bottom: 1px solid $color-gray-background;
+    }
 
     @media (max-width: $flex-collapse) {
         padding: $standard-spacing;
