--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -83,20 +83,10 @@
 }
 
 .public-profile-ad {
-    padding: $standard-spacing * 2;
-    background-color: white;
-    border-top: 1px solid $color-gray-background;
-    border-left: 1px solid $color-gray-background;
-    border-right: 1px solid $color-gray-background;
-    box-shadow: $subtle-shadow;
+    @extend .standard-box;
     display: flex;
     align-items: center;
-    color: black;
     text-decoration: none;
-
-    &:last-of-type {
-        border-bottom: 1px solid $color-gray-background;
-    }
 
     &__img-box {
         flex-grow: 0;
@@ -112,29 +102,17 @@
 }
 
 .public-profile-feedback {
-    padding: $standard-spacing * 2;
-    background-color: white;
-    border-top: 1px solid $color-gray-background;
-    border-left: 1px solid $color-gray-background;
-    border-right: 1px solid $color-gray-background;
-    box-shadow: $subtle-shadow;
+    @extend .standard-box;
     display: flex;
     align-items: center;
     color: black;
     text-decoration: none;
-
-    &:last-of-type {
-        border-bottom: 1px solid $color-gray-background;
-    }
 
     &__avatar-box {
         flex-grow: 0;
         flex-shrink: 0;
         margin-right: $standard-spacing * 2;
         text-align: center;
-    }
-
-    &__description, &__text-box {
     }
 }
 
