--- a/app/views/application/_main_footer.html.erb
+++ b/app/views/application/_main_footer.html.erb
@@ -1,35 +1,28 @@
 <footer class="about-footer <%= @page_needs_no_footer_padding ? 'about-footer--nopad' : '' %>">
-    <div class="container">
-        <div class="row">
-            <div class="four columns">
-                <ul class="about-footer__list">
-                    <li class="about-footer__list-item"><%= link_to 'Informasjon om Plendit', about_us_path, class: "about-footer__list-link" %></li>
-                    <li class="about-footer__list-item"><%= link_to 'Ofte stilte spørsmål',  Rails.configuration.x.customerservice.website, target: '_blank', class: "about-footer__list-link" %></li>
-                </ul>
-            </div>
-            <div class="four columns">
-                </div>
-            <div class="four columns">
-                <h6 class="about-footer__title">Plendit på facebook</h6>
-                <ul class="about-footer__list">
-                    <% if Plendit::Application.config.x.footer.show_facebook_buttons %>
-                        <li class="about-footer__list-item"><%= render partial: 'misc/facebook' %></li>
-                    <% else %>
-                        <li class="about-footer__list-item">Kommer snart!</li>
-                    <% end %>
-                    <% if user_signed_in? && current_user.is_site_admin? %>
-                        <li class="about-footer__list-item"><%= link_to 'Backstage!', backstage_path %></li>
-                    <% end %>
-                </ul>
-            </div>
-        </div>
-        <div class="about-footer__legaleese">
-            Innholdet er beskyttet etter åndsverksloven. Bruk av 
-            automatiserte tjenester (roboter, spidere, indeksering m.m.)
-            samt andre fremgangsmåter for systematisk eller regelmessig bruk
-            er ikke tillatt uten eksplisitt samtykke fra plendit.
-            <%= link_to 'Brukervilkår', terms_path %> &mdash;
-            <%= link_to 'Personvernpolicy', privacy_path %> &mdash; © Plendit AS 2015
-        </div>
+    <div>
+        <%= link_to 'Informasjon om Plendit', about_us_path, class: "about-footer__list-link", class: 'about-footer__link' %>
+        &mdash;
+        <%= link_to 'Ofte stilte spørsmål',  Rails.configuration.x.customerservice.website, target: '_blank', class: 'about-footer__link' %>
+        &mdash;
+        <%= render partial: 'misc/facebook' %>
     </div>
+
+    <br>
+
+    <div class="about-footer__legaleese">
+        Innholdet er beskyttet etter åndsverksloven. Bruk av 
+        automatiserte tjenester (roboter, spidere, indeksering m.m.)
+        samt andre fremgangsmåter for systematisk eller regelmessig bruk
+        er ikke tillatt uten eksplisitt samtykke fra plendit.
+        <br>
+        <%= link_to 'Brukervilkår', terms_path, class: 'about-footer__link' %> &mdash;
+        <%= link_to 'Personvernpolicy', privacy_path, class: 'about-footer__link' %>
+        <% if user_signed_in? && current_user.is_site_admin? %>
+            &mdash; <%= link_to 'Backstage!', backstage_path, class: 'about-footer__link' %>
+        <% end %>
+        &mdash; <span class="about-footer__copyright">© Plendit AS 2015</span>
+    </div>
+
+
 </footer>
+
