--- a/app/views/ads/_ad_booking_box.html.erb
+++ b/app/views/ads/_ad_booking_box.html.erb
@@ -17,11 +17,14 @@
 
             <% unless user_signed_in? && !ad.user.id == current_user.id %>
                 <div class="ad-booking-box__button-holder">
-                    <%= button_tag("Gå til booking", disabled: ( current_user.present? && !(current_user.can_rent? @ad.category) ), class: "u-push-down button button-primary booking-request-form__book-button",  ) %>
-                    <% if current_user.present? && ! (current_user.can_rent? @ad.category) %>
-                        <small> Du mangler dokumentasjon for å utføre denne handlingen.</small>
-                    <% end %>
+                    <%= button_tag("Gå til booking", disabled: ( current_user.present? && !(current_user.can_rent? @ad.category) ), class: "button button-primary booking-request-form__book-button",  ) %>
                 </div>
+                <% if current_user.present? && ! (current_user.can_rent? @ad.category) %>
+                    <div class="ad-booking-box__cant-book-prose">
+                        <%= link_to 'Fyll ut profilen din for å kunne booke.', users_path %>
+                    </div>
+                <% end %>
+
             <% end %>
 
         <% end %>
