--- a/app/views/shared/_profile_quality_box.html.erb
+++ b/app/views/shared/_profile_quality_box.html.erb
@@ -36,69 +36,69 @@
         <ol class="profile-quality-box__verifications-list">
             <li>
                 <% if user.id_card_status == :verified %>
-                    <%= icon 'check-circle-o', class: 'fa-lg u-fill-green profile-quality-box__icon' %>
+                    <%= icon 'check-square-o', class: 'fa-lg profile-quality-box__icon' %>
                     <span>ID-kort</span>
                 <% else %>
-                    <%= icon 'times-circle-o', class: 'fa-lg u-fill-brown profile-quality-box__icon' %>
+                    <%= icon 'square-o', class: 'fa-lg profile-quality-box__icon' %>
                     <span>ID-kort (Mangler)</span>
                 <% end %>
             </li>
 
             <li>
                 <% if user.boat_license_status == :verified %>
-                    <%= icon 'check-circle-o', class: 'fa-lg u-fill-green profile-quality-box__icon' %>
+                    <%= icon 'check-square-o', class: 'fa-lg profile-quality-box__icon' %>
                     <span>Båtførerbevis</span>
                 <% else %>
-                    <%= icon 'times-circle-o', class: 'fa-lg u-fill-brown profile-quality-box__icon' %>
+                    <%= icon 'square-o', class: 'fa-lg profile-quality-box__icon' %>
                     <span>Båtførerbevis (Mangler)</span>
                 <% end %>
             </li>
 
             <li>
                 <% if user.drivers_license_status == :verified %>
-                    <%= icon 'check-circle-o', class: 'fa-lg u-fill-green profile-quality-box__icon' %>
+                    <%= icon 'check-square-o', class: 'fa-lg profile-quality-box__icon' %>
                     <span>Førerkort</span>
                 <% else %>
-                    <%= icon 'times-circle-o', class: 'fa-lg u-fill-brown profile-quality-box__icon' %>
+                    <%= icon 'square-o', class: 'fa-lg profile-quality-box__icon' %>
                     <span>Førerkort (Mangler)</span>
                 <% end %>
             </li>
 
             <li>
                 <% if user.email_verified? %>
-                    <%= icon 'check-circle-o', class: 'fa-lg u-fill-green profile-quality-box__icon' %>
+                    <%= icon 'check-square-o', class: 'fa-lg profile-quality-box__icon' %>
                     <span>E-postadresse</span>
                 <% else %>
-                    <%= icon 'times-circle-o', class: 'fa-lg u-fill-brown profile-quality-box__icon' %>
+                    <%= icon 'square-o', class: 'fa-lg profile-quality-box__icon' %>
                     <span>E-postadresse (Ikke verifisert)</span>
                 <% end %>
             </li>
 
             <li>
                 <% if user.phone_verified? %>
-                    <%= icon 'check-circle-o', class: 'fa-lg u-fill-green profile-quality-box__icon' %>
+                    <%= icon 'check-square-o', class: 'fa-lg profile-quality-box__icon' %>
                     <span>Mobilnummer</span>
                 <% else %>
-                    <%= icon 'times-circle-o', class: 'fa-lg u-fill-brown profile-quality-box__icon' %>
+                    <%= icon 'square-o', class: 'fa-lg profile-quality-box__icon' %>
                     <span>Mobilnummer (Ikke verifisert)</span>
                 <% end %>
             </li>
 
             <% if user.identities.find_by(provider:'facebook').present? %>
                 <li>
-                    <%= icon 'check-circle-o', class: 'fa-lg u-fill-green profile-quality-box__icon' %>
+                    <%= icon 'check-square-o', class: 'fa-lg profile-quality-box__icon' %>
                     <span>Facebook</span>
                 </li>
             <% end %>
             <% if user.identities.find_by(provider:'google').present? %>
                 <li>
-                    <%= icon 'check-circle-o', class: 'fa-lg u-fill-green profile-quality-box__icon' %>
+                    <%= icon 'check-square-o', class: 'fa-lg profile-quality-box__icon' %>
                     <span>Google</span>
                 </li>
             <% end %>
             <% if user.identities.find_by(provider:'spid').present? %>
                 <li>
-                    <%= icon 'check-circle-o', class: 'fa-lg u-fill-green profile-quality-box__icon' %>
+                    <%= icon 'check-square-o', class: 'fa-lg profile-quality-box__icon' %>
                     <span>SPiD</span>
                 </li>
             <% end %>
