--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -162,24 +162,7 @@
             </div>
 
             <div data-controller="updateMainPriceDetails">
-                <div class="main-price__row">
-                    <span class="main-price__label">Leiegebyr:</span>
-                    <span class="main-price__value"><%= format_monetary_full_pretty @ad.booking_calculator.total_fee(@ad.main_payin_rule) %></span>
-                </div>
-
-                <div class="main-price__row">
-                    <% if @ad.boat? || @ad.motor? || @ad.realestate? %>
-                        <i>Inkluderer forsikring.</i>
-                    <% else %>
-                        <i>Inkluderer forsikring opp til</i>
-                        <i><%= format_monetary_full_pretty(@ad.booking_calculator.max_insurance_coverage(@ad.main_payin_rule)) %>.</i>
-                    <% end %>
-                </div>
-
-                <div class="main-price__row">
-                    <strong class="main-price__label">Utbetalt til deg:</strong>
-                    <strong class="main-price__value"><%= format_monetary_full_pretty(@ad.booking_calculator.payout_amount(@ad.main_payin_rule)) %></strong>
-                </div>
+                <%= render partial: 'payin_rules/ad_price_estimate_main' %>
             </div>
         </div>
 
