--- a/app/views/bookings/_booking_summary.html.erb
+++ b/app/views/bookings/_booking_summary.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: "gray_box", locals: {title: "Bookingdetaljer"} do %>
+<%= render layout: 'gray_box', locals: {title: 'Bookingdetaljer'} do %>
     <div class="booking-summary">
         <div class="booking-summary__row">
             <strong>Fra dato:</strong> <%= @booking.display_from_date %>
