--- a/app/views/users/_verifications_list.html.erb
+++ b/app/views/users/_verifications_list.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: "gray_box", locals: {title: 'Min dokumentasjon', nopad: true} do %>
+<%= render layout: 'gray_box', locals: {title: 'Min dokumentasjon', nopad: true} do %>
 
     <% @verification.each do |doc| %>
         <div class="docs-box">
