--- a/app/views/users/_verify_sms.html.erb
+++ b/app/views/users/_verify_sms.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: "gray_box", locals: {title: "Bekreft mobilnummer", id: "verify-phone"} do %>
+<%= render layout: 'gray_box', locals: {title: 'Bekreft mobilnummer', id: 'verify-phone'} do %>
     <%- if sms_notice -%>
         <%= sms_notice %>
     <%- end -%>
