--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,16 +1,16 @@
-<%= render partial: "shared/personal_bar", locals: { selected: "Aktiviteter" } %>
+<%= render partial: 'shared/personal_bar', locals: { selected: 'Aktiviteter' } %>
 
 <div class="container">
     <div class="row">
         <div class="eight columns">
-            <%= render layout: "gray_box", locals: {title: "Aktiviteter"} do %>
+            <%= render layout: 'gray_box', locals: {title: 'Aktiviteter'} do %>
                 Her finner du dine siste aktiviteter. Om du ser etter
                 gamle leieforhold finner du det under
-                <%= link_to "leiehistorikk.", rental_history_users_path %>
+                <%= link_to 'leiehistorikk.', rental_history_users_path %>
             <% end %>
 
             <section class="u-push-down">
-                <%= render partial: "activity_item", collection: @bookings, as: 'booking' %>
+                <%= render partial: 'activity_item', collection: @bookings, as: 'booking' %>
             </section>
         </div>
     </div>
