--- a/app/views/locations/_list.html.erb
+++ b/app/views/locations/_list.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: "gray_box", locals: {title: "Adresser", id: "locations"} do %>
+<%= render layout: 'gray_box', locals: {title: 'Adresser', id: 'locations'} do %>
     <div>
         <ol class="locations-list">
             <% @user.locations.each do |location| %>
@@ -14,7 +14,7 @@
                     </span>
                     <span>
                         <%= "#{location.address_line}, #{location.post_code} #{location.city}" %>
-                        <small><%= link_to "Rediger", edit_location_path(location) %></small>
+                        <small><%= link_to 'Rediger', edit_location_path(location) %></small>
                     </span>
                     <span><%= button_to 'Slett', location, method: :delete, class: 'button', form_class: 'u-inline u-pull-right', data: {confirm: 'Er du sikker på at du vil slette?'}, disabled: location.in_use? %></span>
                 </li>
