--- a/app/views/users/_edit_registration.html.erb
+++ b/app/views/users/_edit_registration.html.erb
@@ -1,5 +1,5 @@
 
-<%= render layout: "gray_box", locals: {title: "Bytte passord", id: "password"} do %>
+<%= render layout: 'gray_box', locals: {title: 'Bytte passord', id: 'password'} do %>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
 
         <%= devise_error_messages! %>
@@ -7,25 +7,25 @@
         <div class="row">
             <div class="six columns">
                 <%= f.label :current_password, 'Nåværende passord:' %>
-                <%= f.password_field :current_password, autocomplete: "off", class: "u-full-width" %>
+                <%= f.password_field :current_password, autocomplete: 'off', class: 'u-full-width' %>
             </div>
         </div>
 
         <div class="row">
             <div class="six columns">
-                <%= f.label :password, "Nytt passord:" %>
-                <%= f.password_field :password, autocomplete: "off", class: "u-full-width" %>
+                <%= f.label :password, 'Nytt passord:' %>
+                <%= f.password_field :password, autocomplete: 'off', class: 'u-full-width' %>
             </div>
 
             <div class="six columns">
-                <%= f.label :password_confirmation, "Gjenta nytt passord:" %>
-                <%= f.password_field :password_confirmation, autocomplete: "off", class: "u-full-width" %>
+                <%= f.label :password_confirmation, 'Gjenta nytt passord:' %>
+                <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'u-full-width' %>
             </div>
         </div>
 
         <div class="row">
             <div class="twelve columns">
-                <%= f.submit "Oppdater", class: "u-pull-right button " %>
+                <%= f.submit 'Oppdater', class: "u-pull-right button " %>
             </div>
         </div>
 
