--- a/app/views/users/edit_user_payment_account.html.erb
+++ b/app/views/users/edit_user_payment_account.html.erb
@@ -1,9 +1,9 @@
-<%= render partial: "shared/personal_bar", locals: {selected: 'Betaling'} %>
+<%= render partial: 'shared/personal_bar', locals: {selected: 'Betaling'} %>
 
 <div class="container">
   <div class="row">
     <div class="eight columns">
-      <%= render layout: "gray_box", locals: {title: "Kontonummer", id: "kontonummer"} do %>
+      <%= render layout: 'gray_box', locals: {title: 'Kontonummer', id: 'kontonummer'} do %>
         <%- if payment_account_notice -%>
           <%= payment_account_notice %>
         <%- end -%>
@@ -23,7 +23,7 @@
           <div class="row">
               <div class="eight columns">
                 <%# FIXME: only show bank account form, if you have confirmed your phone with us. %>
-               <!-- <%= f.label :bank_account_number, "Kontonummer" %>-->
+               <!-- <%= f.label :bank_account_number, 'Kontonummer' %>-->
                 <%= f.text_field :bank_account_number, { maxlength: 13, class: 'u-full-width', placeholder: '1234 56 78901' }  %>
                 <p>
                     Vi trenger ditt kontonummer for å utbetale penger til deg som utleier
@@ -32,7 +32,7 @@
           </div>
           <div class="row">
               <div class="twelve columns">
-                  <%= f.submit "Oppdater", class: "u-pull-right button" %>
+                  <%= f.submit 'Oppdater', class: 'u-pull-right button' %>
               </div>
           </div>
         <% end %>
