--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,10 @@
-<%= render partial: "shared/personal_bar" %>
+<%= render partial: 'shared/personal_bar' %>
 
 <div class="container">
     <div class="row">
         <div class="twelve columns">
 
-            <%= render layout: "gray_box", locals: {title: "Min oversikt"} do %>
+            <%= render layout: 'gray_box', locals: {title: 'Min oversikt'} do %>
                 <p>
                     Her får du en oversikt over den siste aktiviteten på Plendit
                     som er relevant for deg.
@@ -13,7 +13,7 @@
                 <%= button_to 'Legg ut en ny annonse', new_ad_path, method: 'get', class: 'button button-primary', form_class: 'u-inline' %>
             <% end %>
 
-            <%= render layout: "gray_box", locals: {title: "Mine annonser"} do %>
+            <%= render layout: 'gray_box', locals: {title: 'Mine annonser'} do %>
                 <% unless current_user.ads.empty? %>
                     <ul>
                         <% current_user.ads.each do |ad| %>
@@ -27,14 +27,14 @@
                 <% else %>
                     Du har ikke publisert noen annonser ennå.
                 <% end %>
-                <%= button_to "Legg ut en ny annonse", new_ad_path, method: "get", class: "button button-primary" %>
+                <%= button_to 'Legg ut en ny annonse', new_ad_path, method: 'get', class: 'button button-primary' %>
             <% end %>
 
-            <%= render layout: "gray_box", locals: {title: "Utestående vurderinger"} do %>
+            <%= render layout: 'gray_box', locals: {title: 'Utestående vurderinger'} do %>
                 <div>Ingen utestående vurderinger.</div>
             <% end %>
 
-            <%= render layout: "gray_box", locals: {title: "Forespørsler"} do %>
+            <%= render layout: 'gray_box', locals: {title: 'Forespørsler'} do %>
                 <% unless current_user.current_bookings.empty? %>
                     <ul>
                         <% current_user.current_bookings.each do |booking| %>
@@ -50,7 +50,7 @@
                 <% end %>
             <% end %>
 
-            <%= render layout: "gray_box", locals: {title: "Siste meldinger"} do %>
+            <%= render layout: 'gray_box', locals: {title: 'Siste meldinger'} do %>
                 <% unless current_user.received_messages.empty? %>
                     <ul>
                         <% current_user.received_messages.each do |message| %>
