--- a/app/views/users/payment.html.erb
+++ b/app/views/users/payment.html.erb
@@ -6,15 +6,15 @@
 <div class="container">
     <div class="row">
         <div class="eight columns">
-            <%= render partial: "user_payment_cards/list" %>
+            <%= render partial: 'user_payment_cards/list' %>
             <hr>
-            <%= render partial: "users/show_user_payment_account" %>
+            <%= render partial: 'users/show_user_payment_account' %>
             <hr>
-            <%= render partial: "financial_transactions/financial_transaction_list" %>
+            <%= render partial: 'financial_transactions/financial_transaction_list' %>
         </div>
 
         <div class="four columns">
-            <%= render partial: "users/payment/payout_wallet_balance" %>
+            <%= render partial: 'users/payment/payout_wallet_balance' %>
         </div>
     </div>
 </div>
@@ -22,7 +22,7 @@
 <div class="container">
     <div class="row">
         <div class="eight columns">
-          <%= render layout: "gray_box", locals: {title: "Betaling", id: "payment"} do %>
+          <%= render layout: 'gray_box', locals: {title: 'Betaling', id: 'payment'} do %>
             Du må verifisere din e-postadresse og ditt mobilnummer før du kan sende og motta penger. 
 
             <p>
