--- a/app/views/users/rental_history.html.erb
+++ b/app/views/users/rental_history.html.erb
@@ -1,9 +1,9 @@
-<%= render partial: "shared/personal_bar", locals: {selected: 'Leiehistorikk'} %>
+<%= render partial: 'shared/personal_bar', locals: {selected: 'Leiehistorikk'} %>
 
 <div class="container">
     <div class="row">
         <div class="eight columns">
-             <%= render layout: "gray_box", locals: { title: 'Leiehistorikk' } do %>
+             <%= render layout: 'gray_box', locals: { title: 'Leiehistorikk' } do %>
                 Her finner du oversikt over leieforhold hvor du enten
                 har leid ut selv, eller leid av andre.
              <% end %>
@@ -14,7 +14,7 @@
                  </p>
             <% else %>
                 <div>
-                    <%= render partial: "rental_history_item", collection: @bookings, as: :booking %>
+                    <%= render partial: 'rental_history_item', collection: @bookings, as: :booking %>
                 </div>
             <% end %>
         </div>
