--- a/app/assets/stylesheets/_gray_box.scss
+++ b/app/assets/stylesheets/_gray_box.scss
@@ -15,6 +15,11 @@
     &__body {
         padding: $standard-spacing * 2;
 
+        @media (max-width: $flex-collapse) {
+            padding: $standard-spacing;
+        }
+
+
         &--nopad {
             padding: 0;
         }
