--- a/app/assets/stylesheets/_ad_booking_box.scss
+++ b/app/assets/stylesheets/_ad_booking_box.scss
@@ -1,6 +1,10 @@
 @import 'constants.scss';
 
 .ad-booking-box {
+    @media (min-width: $bigscreen) {
+        display: inline-block;
+    }
+
     margin-top: $standard-spacing * 1;
     box-shadow: 0 0 1px rgba(black, 0.2),
                 0 1px 2px rgba(black, 0.3);
