change text for boat limitations

--- a/app/views/ads/_form.html.erb
+++ b/app/views/ads/_form.html.erb
@@ -19,8 +19,7 @@
             <h1 class="u-push-down-only">Legg ut båt</h1>
 
             <small>
-                Inntil videre kan man kun leie ut båter opp til 24 fot.
-                Vi jobber for å finne en god løsning på større båter!
+                Inntil videre kan man kun leie ut båter opp til 24 fot og 150 hestekrefter.
             </small>
         <% when 'motor' %>
             <h1 class="u-push-down-only">Legg ut kjøretøy</h1>
