--- a/app/views/misc/terms.html.erb
+++ b/app/views/misc/terms.html.erb
@@ -392,5 +392,5 @@
   De  personopplysninger som en Part får fra den annen Part eller får tilgang til gjennom  oppfyllelse av denne avtalen, skal bare behandles av Parten i den utstrekning  det er nødvendig for å oppfylle forpliktelsene i denne avtalen.</p>
 <p>Partene  skal ikke uten samtykke fra den andre Part, overlate til eller  tilgjengeliggjøre for tredjemann, personopplysninger som en av Partene får fra  den annen Part eller ellers får tilgang til i forbindelse med oppfyllelsen av  denne avtalen. Personopplysninger kan imidlertid overlates eller  tilgjengeliggjøres for leietaker og/eller utleier når det er nødvendig for å  oppfylle denne avtalens formål.</p>
 <div>
-  <div> </div>
+  <div><a href="docs/Mangopay_Terms-EN.pdf">Vilkår for MangoPay</a> </div>
 </div>
