use link_to for mangopay pdf link

--- a/app/views/misc/terms.html.erb
+++ b/app/views/misc/terms.html.erb
@@ -391,6 +391,7 @@
   -  For skadebehandling, eventuelt forsikringsoppgjør samt benyttet i markedsføringsøyemed  og analyseformål, og for administrasjon av forsikringen.<br>
   De  personopplysninger som en Part får fra den annen Part eller får tilgang til gjennom  oppfyllelse av denne avtalen, skal bare behandles av Parten i den utstrekning  det er nødvendig for å oppfylle forpliktelsene i denne avtalen.</p>
 <p>Partene  skal ikke uten samtykke fra den andre Part, overlate til eller  tilgjengeliggjøre for tredjemann, personopplysninger som en av Partene får fra  den annen Part eller ellers får tilgang til i forbindelse med oppfyllelsen av  denne avtalen. Personopplysninger kan imidlertid overlates eller  tilgjengeliggjøres for leietaker og/eller utleier når det er nødvendig for å  oppfylle denne avtalens formål.</p>
+
 <div>
-  <div><a href="docs/Mangopay_Terms-EN.pdf">Vilkår for MangoPay</a> </div>
+  <%= link_to 'Vilkår for MangoPay', 'docs/Mangopay_Terms-EN.pdf' %>
 </div>
