--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -102,7 +102,7 @@
 
 
         <p>
-            <small>Vi trenger addressen som hører til bankkontoen din:</small>
+            <small>Vi trenger addressen som tilhører bankkontoen din:</small>
         </p>
         <div class="row">
             <div class="eight columns">
