--- a/app/views/users/_privacy_box.html.erb
+++ b/app/views/users/_privacy_box.html.erb
@@ -1,4 +1,4 @@
 <div class="help-box u-push-down">
-    Under <%= link_to 'Personvern.', Rails.configuration.x.customerservice.privacy_info %> kan du lese mer om krav til dokumentasjon og hvordan Plendit behandler
+    Under <%= link_to 'personvern ', Rails.configuration.x.customerservice.privacy_info %> kan du lese mer om krav til dokumentasjon og hvordan Plendit behandler
     personlige dokumenter.
 </div>
