--- a/app/views/ads/list.html.erb
+++ b/app/views/ads/list.html.erb
@@ -5,9 +5,8 @@
         <div class="eight columns">
             <%= render layout: 'gray_box', locals: {title: 'Dine annonser'} do %>
                 <p>
-                    Her finner du en oversikt over dine annonser. Her kan du
-                    se hvilke annonser som er aktive eller inaktive.
-                    Om du ønsker å endre selve annonsen, kan du gjøre
+                    Her finner du en oversikt over dine annonser.
+                    Om du ønsker å endre en annonse, kan du gjøre
                     dette ved å klikke på annonsen det gjelder.
                 </p>
                 <%= button_to 'Legg ut en ny annonse', new_ad_path, method: 'get', class: 'button button-primary' %>
